fix: dropdown scrollbar styling

--- a/src/styles/components/atoms/_dropdown.scss
+++ b/src/styles/components/atoms/_dropdown.scss
@@ -48,7 +48,6 @@
   ul.kc-dropdown__items {
     background-color: $neutral1;
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
-    -webkit-box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
     left: 0;
     list-style-type: none;
     margin: 0;
@@ -56,22 +55,26 @@
     overflow: auto;
     padding: 0;
     position: absolute;
+    transition: border-color .25s linear;
     z-index: 999;
+    -webkit-box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+    -webkit-transition: border-color .25s linear;
 
+    &:hover {
+      border-color: rgba(0, 0, 0, 0.1);
+    }
+
+    &::-webkit-scrollbar,
+    &::-webkit-scrollbar-thumb,
+    &::-webkit-scrollbar-corner {
+      border-right-style: inset;
+      border-color: inherit;
+      border-right-width: calc(100vw + 100vh);
+    }
+    
     &::-webkit-scrollbar {
-      width: 6px;
-    }
-    
-    &::-webkit-scrollbar-track {
-      border-radius: 10px;
-      box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    }
-    
-    &::-webkit-scrollbar-thumb {
-      border-radius: 10px;
-      box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
-      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5); 
+      width: 3px;
+      height: 3px;
     }
 
     li.kc-dropdown__item {
